# wagapi

./: .gitignore  PLAN-streamfield-detection.md  README.md  pyproject.toml
tests/: conftest.py  test_client.py  test_commands.py  test_config.py  test_formatting.py  test_markdown.py  test_snippet_commands.py
wagapi/: __main__.py  cli.py  client.py  config.py  exceptions.py
wagapi/commands/: images.py  init.py  pages.py  schema.py  snippets.py
wagapi/formatting/: markdown.py  output.py
