[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wagapi"
version = "0.6.0"
description = "CLI client for the Wagtail Write API, optimised for LLM orchestration"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Tom Dyson", email = "tom@torchbox.com" }]
keywords = ["wagtail", "cms", "cli", "api", "llm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "click>=8.0",
    "httpx>=0.24",
    "markdown-it-py>=3.0",
    "tomli>=2.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "respx>=0.20",
    "pytest-httpx>=0.20",
]

[project.scripts]
wagapi = "wagapi.cli:cli"

[project.urls]
Repository = "https://github.com/tomdyson/wagapi"
Issues = "https://github.com/tomdyson/wagapi/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
